--- a/package.json
+++ b/package.json
@@ -1,30 +1,66 @@
 {
-  "name": "react-native-wechat",
-  "version": "1.6.1",
-  "description": "react-native library for wechat app",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/weflex/react-native-wechat.git"
-  },
-  "keywords": [
-    "wechat",
-    "react",
-    "react-native",
-    "react-component",
-    "ios"
+  "_args": [
+    [
+      {
+        "raw": "react-native-wechat@git+https://github.com/react-native-lib/react-native-wechat.git",
+        "scope": null,
+        "escapedName": "react-native-wechat",
+        "name": "react-native-wechat",
+        "rawSpec": "git+https://github.com/react-native-lib/react-native-wechat.git",
+        "spec": "git+https://github.com/react-native-lib/react-native-wechat.git",
+        "type": "hosted",
+        "hosted": {
+          "type": "github",
+          "ssh": "git@github.com:react-native-lib/react-native-wechat.git",
+          "sshUrl": "git+ssh://git@github.com/react-native-lib/react-native-wechat.git",
+          "httpsUrl": "git+https://github.com/react-native-lib/react-native-wechat.git",
+          "gitUrl": "git://github.com/react-native-lib/react-native-wechat.git",
+          "shortcut": "github:react-native-lib/react-native-wechat",
+          "directUrl": "https://raw.githubusercontent.com/react-native-lib/react-native-wechat/master/package.json"
+        }
+      },
+      "/Users/joshua/vanke/newwork"
+    ]
   ],
-  "dependencies": {
-    "es6-promisify": "3.0.0",
-    "events": "1.0.2"
+  "_from": "git+https://github.com/react-native-lib/react-native-wechat.git",
+  "_id": "react-native-wechat@1.6.1",
+  "_inCache": true,
+  "_installable": true,
+  "_location": "/react-native-wechat",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "react-native-wechat@git+https://github.com/react-native-lib/react-native-wechat.git",
+    "scope": null,
+    "escapedName": "react-native-wechat",
+    "name": "react-native-wechat",
+    "rawSpec": "git+https://github.com/react-native-lib/react-native-wechat.git",
+    "spec": "git+https://github.com/react-native-lib/react-native-wechat.git",
+    "type": "hosted",
+    "hosted": {
+      "type": "github",
+      "ssh": "git@github.com:react-native-lib/react-native-wechat.git",
+      "sshUrl": "git+ssh://git@github.com/react-native-lib/react-native-wechat.git",
+      "httpsUrl": "git+https://github.com/react-native-lib/react-native-wechat.git",
+      "gitUrl": "git://github.com/react-native-lib/react-native-wechat.git",
+      "shortcut": "github:react-native-lib/react-native-wechat",
+      "directUrl": "https://raw.githubusercontent.com/react-native-lib/react-native-wechat/master/package.json"
+    }
   },
-  "peerDependencies": {
-    "react-native": ">=0.29"
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "git+https://github.com/react-native-lib/react-native-wechat.git#5d11b797ca77d8698ca68efc6ed972f954b07c1e",
+  "_shasum": "9f1a097c701eb2a402829b93f55b351ad77fd3b2",
+  "_shrinkwrap": null,
+  "_spec": "react-native-wechat@git+https://github.com/react-native-lib/react-native-wechat.git",
+  "_where": "/Users/joshua/vanke/newwork",
+  "author": {
+    "name": "Yorkie Liu",
+    "email": "yorkiefixer@gmail.com"
   },
-  "author": "Yorkie Liu <yorkiefixer@gmail.com>",
+  "bugs": {
+    "url": "https://github.com/weflex/react-native-wechat/issues"
+  },
   "contributors": [
     {
       "name": "Yorkie Liu",
@@ -35,9 +71,36 @@
       "email": "tdzl2003@gmail.com"
     }
   ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/weflex/react-native-wechat/issues"
+  "dependencies": {
+    "es6-promisify": "3.0.0",
+    "events": "1.0.2"
   },
-  "homepage": "https://github.com/weflex/react-native-wechat#readme"
+  "description": "react-native library for wechat app",
+  "devDependencies": {},
+  "gitHead": "5d11b797ca77d8698ca68efc6ed972f954b07c1e",
+  "homepage": "https://github.com/weflex/react-native-wechat#readme",
+  "keywords": [
+    "wechat",
+    "react",
+    "react-native",
+    "react-component",
+    "ios"
+  ],
+  "license": "MIT",
+  "main": "index.js",
+  "name": "react-native-wechat",
+  "optionalDependencies": {},
+  "peerDependencies": {
+    "react-native": ">=0.29"
+  },
+  "readme": "![react-native-wechat logo](./logo.jpg?raw=true)\n\n## Table of Contents\n\n- [Build](#build)\n- [Linking Steps](#linking-steps)\n  - [Linking iOS](#linking-ios)\n  - [Linking Android with Gradle](#linking-android-with-gradle)\n- [API Documentation](#api-documentation)\n  - [Methods](#methods)\n  - [Events](#events)\n- [Installation](#installation)\n- [Community](#community)\n- [Who Use It](#who-use-it)\n- [Authors](#authors)\n- [License](#license)\n\n## Build\n\nReact-Native bridge static library for WeChat SDK which requires:\n\n- [x] iOS SDK 1.7.2\n- [x] Android SDK 221\n\nAnd [react-native-wechat] has the following tracking data in open source world:\n\n| type        | badge                                           |\n|-------------|-------------------------------------------------|\n| NPM         | [![NPM version][npm-image]][npm-url]            |\n| Dependency  | [![Dependency Status][david-image]][david-url]  |\n| Downloads   | [![Downloads][downloads-image]][downloads-url]  |\n\n## Linking Steps\n\nBefore using this library to work with your app, you should follow the below steps to link this library with\nyour app project, _if there is something that not working, please check the list here_.\n\n### Linking iOS\n\n- Link `RCTWeChat` library from your `node_modules/react-native-wechat/ios` folder like react-native's \n[Linking Libraries iOS Guidance], Note: _Don't forget to add it to \"Build Phases\" of your target project_.\n\n- Add the following libraries to your \"Link Binary with Libraries\":\n\n    ```\n    SystemConfiguration.framework\n    CoreTelephony.framework\n    libsqlite3.0\n    libc++\n    libz\n    ```\n\n- Add \"URL Schema\" as your app id for \"URL type\" in `Targets` > `info`, See the following screenshot for the view on your XCode\n    ![Set URL Schema in XCode](https://res.wx.qq.com/open/zh_CN/htmledition/res/img/pic/app-access-guide/ios/image0042168b9.jpg)\n\n- Only for iOS 9, add `wechat` and `weixin` into `LSApplicationQueriesSchemes` in `Targets` > `info` > `Custom iOS Target Properties`.\n\n- Code the following in `AppDelegate.m` of your project to enable [LinkingIOS]\n\n    ```objective-c\n    - (BOOL)application:(UIApplication *)application openURL:(NSURL *)url\n    sourceApplication:(NSString *)sourceApplication annotation:(id)annotation\n    {\n      return [RCTLinkingManager application:application openURL:url\n                                sourceApplication:sourceApplication annotation:annotation];\n    }\n    ```\n\n### Linking Android with Gradle\n\n- Add following lines into `android/settings.gradle`\n\n    ```gradle\n    include ':RCTWeChat'\n    project(':RCTWeChat').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-wechat/android')\n    ```\n\n- Add following lines into your `android/app/build.gradle` in section `dependencies`\n\n    ```gradle\n    dependencies {\n      compile project(':RCTWeChat')    // Add this line only.\n    }\n    ```\n\n- Add following lines into `MainActivity.java`\n\n    ```java\n    import com.theweflex.react.WeChatPackage;       // Add this line before public class MainActivity\n    ...\n\n    /**\n     * A list of packages used by the app. If the app uses additional views\n     * or modules besides the default ones, add more packages here.\n     */\n    @Override\n    protected List<ReactPackage> getPackages() {\n      return Arrays.<ReactPackage>asList(\n        new MainReactPackage(), \n        new WeChatPackage()        // Add this line\n      );\n    }\n    ```\n\n- Create a package named 'wxapi' in your application package and a class named 'WXEntryActivity' in it. \n      This is needed to get request and response from wechat.\n\n    ```java\n    package your.package.wxapi;\n\n    import android.app.Activity;\n    import android.os.Bundle;\n    import com.theweflex.react.WeChatModule;\n\n    public class WXEntryActivity extends Activity{\n      @Override\n      protected void onCreate(Bundle savedInstanceState) {\n        super.onCreate(savedInstanceState);\n        WeChatModule.handleIntent(getIntent());\n        finish();\n      }\n    }\n    ```\n\n- Add activity declare in your AndroidManifest.xml\n\n    ```xml\n    <manifest>\n      <application>\n        <!-- 微信Activity -->\n        <activity\n          android:name=\".wxapi.WXEntryActivity\"\n          android:label=\"@string/app_name\"\n          android:exported=\"true\"\n          />\n      </application>\n    </manifest>\n    ```\n\n- Add these lines to 'proguard-rules.pro':\n\n    ```pro\n    -keep class com.tencent.mm.sdk.** {\n       *;\n    }\n    ```\n\n## API Documentation\n\n### Methods\n\n[react-native-wechat] supports the following methods to get information and do something functions\nwith WeChat app.\n\n#### registerApp(appid)\n\nYou should call this function in global, calling over twice would throw an error.\n\n  ```js\n  // If you register here\n  componentDidMount (){\n    wechat.registerApp('your appid')\n  }\n  ```\n\n- {String} `appid` the appid you get from WeChat dashboard\n- returns {Promise} \n\n#### registerAppWithDescription(appid, appdesc)\n\nOnly available on iOS.\n\n- {String} `appid` the appid you get from WeChat dashboard\n- {String} `appdesc` the description of your app\n- returns {Promise} \n\n#### isWXAppInstalled() \n\nCheck if wechat installed in this app.\n\n- returns {Promise} Contain the result.\n\n#### isWXAppSupportApi()\n\nCheck if wechat support open url.\n\n- returns {Promise}  Contain the result.\n\n#### getApiVersion()\n\nGet api version of WeChat SDK.\n\n- returns {Promise}  Contain the result.\n\n#### openWXApp()\n\nOpen WeChat app with an optional callback argument.\n\n- returns {Promise} \n\n#### sendAuthRequest([scope[, state]])\n\nSend authentication request.\n\n- {Array|String} `scope` Scopes of auth request.\n- {String} `state` the state of OAuth2\n- returns {Promise}\n\n#### shareToTimeline(data)\n\nShare a message to timeline (朋友圈).\n\n- {Object} `data` contain the message to send\n    - {String} `thumbImage` Thumb image of the message, which can be a uri or a resource id.\n    - {String} `type` Type of this message. Can be {news|text|imageUrl|imageFile|imageResource|video|audio|file}\n    - {String} `webpageUrl` Required if type equals `news`. The webpage link to share.\n    - {String} `imageUrl` Provide a remote image if type equals `image`.\n    - {String} `videoUrl` Provide a remote video if type equals `video`.\n    - {String} `musicUrl` Provide a remote music if type equals `audio`.\n    - {String} `filePath` Provide a local file if type equals `file`.\n    - {String} `fileExtension` Provide the file type if type equals `file`.\n\nThese example code need 'react-native-chat' and 'react-native-fs' plugin.\n\n```js\nimport * as WeChat from 'react-native-wechat';\nimport fs from 'react-native-fs';\nlet resolveAssetSource = require('resolveAssetSource');\n\n// Code example to share text message:\ntry {\n  let result = await WeChat.shareToTimeline({\n    type: 'text', \n    description: 'hello, wechat'\n  });\n  console.log('share text message to time line successful:', result);\n} catch (e) {\n  console.error('share text message to time line failed with:', e);\n}\n\n// Code example to share image url:\n// Share raw http(s) image from web will always fail with unknown reason, please use image file or image resource instead\ntry {\n  let result = await WeChat.shareToTimeline({\n    type: 'imageUrl',\n    title: 'web image',\n    description: 'share web image to time line',\n    mediaTagName: 'email signature',\n    messageAction: undefined,\n    messageExt: undefined,\n    imageUrl: 'http://www.ncloud.hk/email-signature-262x100.png'\n  });\n  console.log('share image url to time line successful:', result);\n} catch (e) {\n  console.log('share image url to time line failed with:', e);\n}\n\n// Code example to share image file:\ntry {\n  let rootPath = fs.DocumentDirectoryPath;\n  let savePath = rootPath + '/email-signature-262x100.png';\n  console.log(savePath);\n  \n  /*\n   * savePath on iOS may be:\n   *  /var/mobile/Containers/Data/Application/B1308E13-35F1-41AB-A20D-3117BE8EE8FE/Documents/email-signature-262x100.png\n   *\n   * savePath on Android may be:\n   *  /data/data/com.wechatsample/files/email-signature-262x100.png\n   **/\n  await fs.downloadFile('http://www.ncloud.hk/email-signature-262x100.png', savePath);\n  let result = await WeChat.shareToTimeline({\n    type: 'imageFile',\n    title: 'image file download from network',\n    description: 'share image file to time line',\n    mediaTagName: 'email signature',\n    messageAction: undefined,\n    messageExt: undefined,\n    imageUrl: \"file://\" + savePath // require the prefix on both iOS and Android platform\n  });\n  console.log('share image file to time line successful:', result);\n} catch (e) {\n  console.error('share image file to time line failed with:', e);\n}\n\n// Code example to share image resource:\ntry {\n  let imageResource = require('./email-signature-262x100.png');\n  let result = await WeChat.shareToTimeline({\n    type: 'imageResource',\n    title: 'resource image',\n    description: 'share resource image to time line',\n    mediaTagName: 'email signature',\n    messageAction: undefined,\n    messageExt: undefined,\n    imageUrl: resolveAssetSource(imageResource).uri\n  });\n  console.log('share resource image to time line successful', result);\n}\ncatch (e) {\n  console.error('share resource image to time line failed', e);\n}\n\n// Code example to download an word file from web, then share it to WeChat session\n// only support to share to session but time line\n// iOS code use DocumentDirectoryPath\ntry {\n  let rootPath = fs.DocumentDirectoryPath;\n  let fileName = 'signature_method.doc';\n  /*\n   * savePath on iOS may be:\n   *  /var/mobile/Containers/Data/Application/B1308E13-35F1-41AB-A20D-3117BE8EE8FE/Documents/signature_method.doc\n   **/ \n  let savePath = rootPath + '/' + fileName;\n\n  await fs.downloadFile('https://open.weixin.qq.com/zh_CN/htmledition/res/assets/signature_method.doc', savePath);\n  let result = await WeChat.shareToSession({\n    type: 'file',\n    title: fileName, // WeChat app treat title as file name\n    description: 'share word file to chat session',\n    mediaTagName: 'word file',\n    messageAction: undefined,\n    messageExt: undefined,\n    filePath: savePath,\n    fileExtension: '.doc'\n  });\n  console.log('share word file to chat session successful', result);\n} catch (e) {\n  console.error('share word file to chat session failed', e);\n}\n\n//android code use ExternalDirectoryPath\ntry {\n  let rootPath = fs.ExternalDirectoryPath;\n  let fileName = 'signature_method.doc';\n  /*\n   * savePath on Android may be:\n   *  /storage/emulated/0/Android/data/com.wechatsample/files/signature_method.doc\n   **/\n  let savePath = rootPath + '/' + fileName;\n  await fs.downloadFile('https://open.weixin.qq.com/zh_CN/htmledition/res/assets/signature_method.doc', savePath);\n  let result = await WeChat.shareToSession({\n    type: 'file',\n    title: fileName, // WeChat app treat title as file name\n    description: 'share word file to chat session',\n    mediaTagName: 'word file',\n    messageAction: undefined,\n    messageExt: undefined,\n    filePath: savePath,\n    fileExtension: '.doc'\n  });\n  console.log('share word file to chat session successful', result);\n}\ncatch (e) {\n  console.error('share word file to chat session failed', e);\n}\n```\n\n#### shareToSession(data)\n\nSimilar to `shareToTimeline` but send message to a friend or a groups.\n\n#### addListener(eventType, listener[, context])\n\nAdds a listener to be invoked when events of the specified type are emitted. An optional calling context may be provided. \n\nReturn a object like `{remove: function}` which can be used to remove this listener.\n\n#### once(eventType, listener[, context])\n\nSimilar to addListener, except that the listener is removed after it is invoked once.\n\n#### removeAllListeners()\n\nRemoves all of the registered listeners, including those registered as listener maps.\n\n### Events\n\n[react-native-wechat] supports some events which your can register in JavaScript side and get fired when\nsomething happens\n\n#### `SendAuth.Resp`\n\nReceive result for `sendAuthRequest` and arguments would be:\n\n| name    | type   | description                         |\n|---------|--------|-------------------------------------|\n| errCode | Number |                                     |\n| errStr  | String | Error message if any error occurred |\n| openId  | String |                                     |\n| code    | String | Authorization code                  |\n| url     | String | The URL string                      |\n| lang    | String | The user language                   | \n| country | String | The user country                    |\n\n#### `SendMessageToWX.Resp`\n\nReceive result for `shareToTimeline` and `shareToSession` and arguments would be:\n\n| name    | type   | description                         |\n|---------|--------|-------------------------------------|\n| errCode | Number | 0 if authorization successed        |\n| errStr  | String | Error message if any error occurred |\n\nFor more details, visit [WeChat SDK].\n\n#### `pay`\n\n```\ntry {\n  let result = await WeChat.pay(\n    {\n      partnerId: '', // 商家向财付通申请的商家id\n      prepayId: '', // 预支付订单\n      nonceStr: '', // 随机串，防重发\n      timeStamp: '', // 时间戳，防重发\n      package: '', // 商家根据财付通文档填写的数据和签名\n      sign: '' // 商家根据微信开放平台文档对数据做的签名\n    }\n  );\n  console.log('Pay for success!');\n} catch (error) {\n  console.log('Pay for failure!');\n}\n```\n\n## Installation\n\n```sh\n$ npm install react-native-wechat --save\n```\n\n## Community\n\n- [Join us at gitter](https://gitter.im/weflex/react-native-wechat?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge)\n- QQ Group: 336021910\n\n## Who Use It\n- [reading: iReading App Write In React-Native](https://github.com/attentiveness/reading)\n\n## Authors\n\n- [Deng Yun] from [react-native-cn]\n- [Xing Zhen]\n- [Yorkie Liu] from [WeFlex]\n\n## License\n\nMIT @ [WeFlex], Inc\n\n[react-native-wechat]: https://github.com/weflex/react-native-wechat\n[npm-image]: https://img.shields.io/npm/v/react-native-wechat.svg?style=flat-square\n[npm-url]: https://npmjs.org/package/react-native-wechat\n[travis-image]: https://img.shields.io/travis/weflex/react-native-wechat.svg?style=flat-square\n[travis-url]: https://travis-ci.org/weflex/react-native-wechat\n[david-image]: http://img.shields.io/david/weflex/react-native-wechat.svg?style=flat-square\n[david-url]: https://david-dm.org/weflex/react-native-wechat\n[downloads-image]: http://img.shields.io/npm/dm/react-native-wechat.svg?style=flat-square\n[downloads-url]: https://npmjs.org/package/react-native-wechat\n[Deng Yun]: https://github.com/tdzl2003\n[Xing Zhen]: https://github.com/xing-zheng\n[Yorkie Liu]: https://github.com/yorkie\n[WeFlex]: https://github.com/weflex\n[react-native-cn]: https://github.com/reactnativecn\n[WeChat SDK]: https://open.weixin.qq.com/cgi-bin/showdocument?action=dir_list&t=resource/res_list&verify=1&id=1417674108&token=&lang=zh_CN\n[Linking Libraries iOS Guidance]:\nhttps://developer.apple.com/library/ios/recipes/xcode_help-project_editor/Articles/AddingaLibrarytoaTarget.html\n",
+  "readmeFilename": "README.md",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/weflex/react-native-wechat.git"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "version": "1.6.1"
 }
