--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
   ],
   "license": "MIT",
   "main": "index.js",
-  "name": "react-native-wechat",
+  "name": "react-native-vk-wechat",
   "optionalDependencies": {},
   "peerDependencies": {
     "react-native": ">=0.29"
@@ -102,5 +102,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.6.1"
+  "version": "2.0.0"
 }
